--- a/My Job/Writing/kapitel/kapitel1.tex
+++ b/My Job/Writing/kapitel/kapitel1.tex
@@ -1,4 +1,5 @@
 \chapter{Introduction}
+\section{Water Cycle}
 Water is necessary resources for human beings. It is the most important ingredient of life; it has
 a regulating effect on climate and all industries can not function well without it. However, 98 \%
 of the water on the earth is in the oceans, 1.6\% is in ice caps, which means only 0.4 \% is the
@@ -11,6 +12,7 @@ The hydrology cycle (see figure \ref{fig:hydrologic cycle}) includes 3 major par
 	\caption{horologic cycle, \href{https://www.usgs.gov/media/images/water-cycle-natural-water-cycle}{source: https://www.usgs.gov/media/images/water-cycle-natural-water-cycle}} 
 	\label{fig:hydrologic cycle}
 \end{figure}\\
+\section{Observation from Satellite Gravimetry}
 However, it was extremely difficult to measure the global water storage change consistently. In some way. Remote sensing with satellite is the perfect tool for hydrology research, which has the ability to provide the data globally in a long term.\\\\
 The GRACE twin satellites, launched 17 March 2002, are making detailed measurements of Earth's gravity field, which are caused by monthly changes in mass. The mass changes can be thought of as concentrated in a very thin layer of water thickness changes near the Earth's surface by moving ocean, atmospheric and land ice masses and by mass exchanges between these Earth system compartments. \\\\
 There are 2 satellites with tandem polar orbit. Since the orbit is around the pole and the earth rotates itself, the satellites were able to get the whole view of the earth. Unlike the normal remote sensors, the GRACE satellites measured the gravity field of the earth. When the 2 satellites went over a mass anomaly like a big mountain, the distance of them will be a little bit smaller. By calculating this distance difference with the help of GPS system, the gravity filed of the earth along with the total water storage are able to be plotted monthly. 
@@ -26,6 +28,7 @@ There are 2 satellites with tandem polar orbit. Since the orbit is around the po
 	\caption{Ob basin} 
 	\label{fig:Obbasin}
 \end{figure}\\
+\section{Motivation}
 Since 2002 it has been discovered that the water storage of many big basins has increased (see figure \ref{fig:TWSA}). One important basin of them is Ob basin in west Siberia (see figure \ref{fig:Obbasin}). The reason and the start time of this positive trend would be very interesting and also important. \\\\
 The Thesis is organized in the following way:
 \begin{itemize}
@@ -34,3 +37,4 @@ The Thesis is organized in the following way:
 	\item The chapter 4 provides the results: the main reason of the main reason of the positiv trend would be critical discussed.
 	\item In the last chapter, a brief summary and conclustion will be provided
 \end{itemize}
+\section{Objectives}
