--- a/My Job/Writing/extras/titleheader.tex
+++ b/My Job/Writing/extras/titleheader.tex
@@ -24,6 +24,7 @@ numbers=noenddot,
 \usepackage{ellipsis}       % Leerraum um Auslassungspunkte
 \usepackage{fixltx2e}       % Fehlerkorrektur Zeichensätze
 \usepackage{xspace}         % füge evtl. notwendiges Leerzeichen hinzu (\xspace)
+\usepackage{textcomp}
 
 %\usepackage{mathptmx}           % Times + passende Mathefonts
 \usepackage{mathpazo}           % Palatino + passende Mathefonts
