--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -1,13 +1,15 @@
 % Hier kommen Referenzen hinein
 % Damit diese auch gefunden werden, muss im Hauptverzeichnis
-% bibtex "datei.aux" also hier arbeit.aux ausgeführt werden 
+% bibtex "datei.aux" also hier arbeit.aux ausgefuert werden 
 
-@ARTICLE{Mustermann:2003,
-  author = {Max Mustermann},
-  title = {Der {G}eod\"{a}t in seiner nat\"{u}rlichen {U}mgebung},
-  journal = {Nature},
-  year = {2003},
-  volume = {108},
-  pages = {37-46},
-  number = {1--2},
+@ARTICLE{Wahr et al., 1998,
+  author = {Wahr J, Molenaar M, Bryan F},
+  title = {Time variability of the Earth's gravity field: Hydrological and oceanic effects and their possible detection using Grace},
+  journal = {Journal of Geophysical Research},
+  year = {1998},
+  volume = {103},
+  pages = {30},
+  number = {205 - 229}
 }
+
+
