--- a/My Job/Writing/extras/titleheader.tex
+++ b/My Job/Writing/extras/titleheader.tex
@@ -25,6 +25,7 @@ numbers=noenddot,
 \usepackage{fixltx2e}       % Fehlerkorrektur Zeichensätze
 \usepackage{xspace}         % füge evtl. notwendiges Leerzeichen hinzu (\xspace)
 \usepackage{textcomp}
+\usepackage{cite}
 
 %\usepackage{mathptmx}           % Times + passende Mathefonts
 \usepackage{mathpazo}           % Palatino + passende Mathefonts
