--- a/My Job/Writing/literatur/bib.bib
+++ b/My Job/Writing/literatur/bib.bib
@@ -1,15 +1,54 @@
-% Hier kommen Referenzen hinein
-% Damit diese auch gefunden werden, muss im Hauptverzeichnis
-% bibtex "datei.aux" also hier arbeit.aux ausgefuert werden 
-
-@ARTICLE{Wahr et al., 1998,
-  author = {Wahr J, Molenaar M, Bryan F},
-  title = {Time variability of the Earth's gravity field: Hydrological and oceanic effects and their possible detection using Grace},
-  journal = {Journal of Geophysical Research},
-  year = {1998},
-  volume = {103},
-  pages = {30},
-  number = {205 - 229}
+@article{wahr1998time,
+  title={Time variability of the Earth's gravity field: Hydrological and oceanic effects and their possible detection using GRACE},
+  author={Wahr, John and Molenaar, Mery and Bryan, Frank},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={103},
+  number={B12},
+  pages={30205--30229},
+  year={1998},
+  publisher={Wiley Online Library}
 }
 
+@book{revenga1998watersheds,
+	title={Watersheds of the World: Ecological Value and Vulnerability},
+	author={Revenga, C. and World Resources Institute and Murray, S. and Hammond, A. and Abramovitz, J.N.},
+	isbn={9781569732540},
+	lccn={98085401},
+	series={World Resources Institute report},
+	url={https://books.google.de/books?id=WGwYAAAAIAAJ},
+	year={1998},
+	publisher={World Resources Institute}
+}
 
+@article{zhang1999statistics,
+	title={Statistics and characteristics of permafrost and ground-ice distribution in the Northern Hemisphere},
+	author={Zhang, T and Barry, Roger G and Knowles, K and Heginbottom, JA and Brown, J},
+	journal={Polar Geography},
+	volume={23},
+	number={2},
+	pages={132--154},
+	year={1999},
+	publisher={Taylor \& Francis}
+}
+
+@article{Obriver,
+	title={Ob River},
+	author={Liliya Konstantinovna Malik, Lewis Owen, Philip P. Micklin},
+	publisher={Encyclopaedia Britannica}
+}
+
+@article{allen1998crop,
+	title={Crop evapotranspiration-Guidelines for computing crop water requirements-FAO Irrigation and drainage paper 56},
+	author={Allen, Richard G and Pereira, Luis S and Raes, Dirk and Smith, Martin and others},
+	journal={Fao, Rome},
+	volume={300},
+	number={9},
+	pages={D05109},
+	year={1998}
+}
+
+@Misc{gracecomponent,
+	author = {NASA},
+	title = {GRACE Mission},
+	note = {\url{https://www.nasa.gov/mission_pages/Grace/spacecraft/index.html},
+}
